style.css
/*--------------------
   1. BASE CSS
----------------------*/

@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700|Josefin+Sans:400,600,700');
@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

.alignleft {
    float: left;
    margin-right: 15px;
}

.alignright {
    float: right;
    margin-left: 15px;
}

.aligncenter {
    display: block;
    margin: 0 auto 15px;
}

a {
    -webkit-transition: 0.3s;
    transition: 0.3s;
}

a:focus,
a:hover {
    outline: 0;
    text-decoration: none;
}

button:focus {
    outline: 0;
}

img {
    max-width: 100%;
    height: auto;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    margin: 0 0 15px;
    /*font-family: 'Montserrat', sans-serif;*/
    font-family: 'Josefin Sans', sans-serif;
    text-transform: capitalize;
}

html,
body {
    height: 100%;
}

body {
    font-family: 'Raleway', sans-serif;
    font-size: 16px;
    line-height: 1.5em;
    font-weight: 400;
    color: #494949;
}

a {
    color: #494949;
}

a:hover {
    text-decoration: none;
    color: inherit;
}

.navbar-header .collapse,
.navbar-toggle {
    border: 2px solid #FFF;
    border-radius: 0;
}

.navbar-toggle .icon-bar {
    background: #FFF none repeat scroll 0 0;
}


/* Remove Chrome Input Field's Unwanted Yellow Background Color */

input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus {
    -webkit-box-shadow: 0 0 0px 1000px white inset !important;
}

.area-title p {
    margin-bottom: 0;
}

.section-padding {
    padding: 100px 0;
}

.padding-top {
    padding-top: 100px;
}

.padding-bottom {
    padding-bottom: 100px;
}

.margin-bottom {
    margin-bottom: 50px;
}

.margin-top {
    margin-top: 50px;
}

.gray-bg {
    background: #F3F3F3;
    color: #5b5a5a
}

.light-gradient-bg {
    background: rgba(0, 0, 0, 0) -webkit-radial-gradient(#3e2374, #b96ffd) repeat scroll 0 0;
    background: rgba(0, 0, 0, 0) radial-gradient(#3e2374, #b96ffd) repeat scroll 0 0;
    color: #fff;
}

.dark-gradient-bg {
    background: -webkit-radial-gradient(circle farthest-side at center bottom, #3e2374, #b96ffd 35%);
    background: radial-gradient(circle farthest-side at center top, #a800d1, #250045 35%);
    color: #fff;
}

.dark-gradient-bg-screen {
  background: -webkit-radial-gradient(circle farthest-side at center bottom, #3e2374, #b96ffd 0%);
  background: radial-gradient(circle farthest-side at center top, #a800d1, #250045 0%);
  color: #fff;
}


.dark-gradient-bg3 {
    background: -webkit-radial-gradient(circle farthest-side at center bottom, #250045, #250045 52%);
    background: radial-gradient(circle farthest-side at center top, #250045, #250045 52%);
    color: #fff;
}


.dark-gradient-bg2 {
    /* background: -webkit-radial-gradient(circle farthest-side at center bottom, #3e2374, #b96ffd 50%);
    background: radial-gradient(circle farthest-side at center top, #a800d1, #250045 50%); */
    color: #fff;
}

.dark-gradient-bg .area-title:after {
    background: #3e2374;
}

.dark-gradient-bg a {
    color: #fff;
}


/*--------------------------
    2. TOP AREA
---------------------------*/

.top-area {
    height: 100%;
    position: relative;
    width: 100%;
}

.top-area-bg {
    object-fit: cover;
    height: calc(100% + 200px);
    left: 0;
    position: absolute;
    top: 0;
    width: 100%;
}

.top-area-bg::after {
    background: #000000 none repeat scroll 0 0;
    content: "";
    height: 100%;
    left: 0;
    opacity: 0.5;
    position: absolute;
    top: 0;
    width: 100%;
}


/*---------------------------------
    2.1 MAINMENU AREA
-----------------------------------*/

.header-top-area {
    left: 0;
    position: absolute;
    top: 0;
    width: 100%;
    z-index: 999;
}

.mainmenu-area {
    position: relative;
    z-index: 9999;
}

.mainmenu-area-bg {
    background: radial-gradient(circle farthest-side at center top, #a800d1, #250045 50%);
    color: white;
    height: 100%;
    left: 0;
    opacity: 0;
    position: absolute;
    top: 0;
    -webkit-transition: all 0.3s ease-in-out 0s;
    transition: all 0.3s ease-in-out 0s;
    width: 100%;
}

.is-sticky .mainmenu-area-bg {
    box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
    opacity: 1;
}

.navbar {
    border-bottom: 0 none;
    border-top: 0 none;
    margin-bottom: 0;
}

.navbar-header {
    margin-top: 25px;
    -webkit-transition: all 0.3s ease 0s;
    transition: all 0.3s ease 0s;
}

.is-sticky .navbar-header {
    margin-top: 6px;
}

.navbar-brand {
    padding: 0;
}

.navbar-brand>img {
    -webkit-transition: all 0.3s ease 0s;
    transition: all 0.3s ease 0s;
}

a.navbar-brand {
    color: #3e2374;
    font-family: 'Poppins', sans-serif;
    font-size: 30px;
    font-weight: 600;
    letter-spacing: 3px;
    line-height: inherit;
    text-transform: uppercase;
}

.navbar-brand {
    height: auto;
    margin-top: -6px;
}

ul#nav {
    float: right;
    -webkit-transition: 0.3s;
    transition: 0.3s;
}

ul#nav li {
    overflow: hidden;
    padding: 40px 15px;
    -webkit-transition: all 0.3s ease 0s;
    transition: all 0.3s ease 0s;
}

ul#nav li a {
    background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
    color: #ffffff;
    font-family: "Josefin Sans", sans-serif;
    font-size: 15px;
    font-weight: 600;
    letter-spacing: 1px;
    padding: 0;
    position: relative;
    text-transform: uppercase;
    -webkit-transition: all 0.3s ease 0s;
    transition: all 0.3s ease 0s;
}

.is-sticky ul#nav li {
    padding: 20px 15px;
}

.is-sticky ul#nav li a {
    color: #000000;
}
/* ... */

